// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingSpinner Basic smoke-test 1`] = `
.c0 {
  box-sizing: content-box;
  margin: auto;
  padding: 16px;
  border-radius: 8px;
  font-size: 48px;
  width: 48px;
  height: 48px;
  opacity: 0.84;
  color: var(--charcoal-text4);
  background-color: var(--charcoal-background1);
}

.c1 {
  width: 1em;
  height: 1em;
  border-radius: 1em;
  background-color: currentColor;
  -webkit-animation: cNZOgq 1s both ease-out;
  animation: cNZOgq 1s both ease-out;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
}

.c1[data-reset-animation] {
  -webkit-animation: none;
  animation: none;
}

<div data-dark="false">
  <div size="48"
       class="c0 "
       role="progressbar"
  >
    <div role="presentation"
         class="c1"
    >
    </div>
  </div>
</div>
`;

exports[`LoadingSpinner Icon smoke-test 1`] = `
.c0 {
  width: 1em;
  height: 1em;
  border-radius: 1em;
  background-color: currentColor;
  -webkit-animation: cNZOgq 1s both ease-out;
  animation: cNZOgq 1s both ease-out;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
}

.c0[data-reset-animation] {
  -webkit-animation: none;
  animation: none;
}

<div data-dark="false">
  <div css="
        font-size: 12px;
        color: #B1CC29;
      ">
    <div role="presentation"
         class="c0"
    >
    </div>
  </div>
</div>
`;
